# noswitch-pos-schedule

./: .dockerignore  .env.example  .gitignore  Caddyfile  Dockerfile.api  Dockerfile.worker  README.md  docker-compose.prod.yml  docker-compose.yml  install-windows.bat  pyproject-poetry.toml  pyproject.toml  requirements.txt
.github/workflows/: ci-cd.yml
app/: celery_app.py  config.py  database.py  exceptions.py  main.py
app/api/: router.py
app/api/v1/: auth.py  caja.py  comprobantes.py  configuracion.py  pagos.py  productos.py  reportes.py  turnos.py  usuarios.py  ventas.py
app/models/: __init__.py  auditoria.py  caja.py  comprobante.py  configuracion.py  pago.py  producto.py  sucursal.py  turno.py  usuario.py  venta.py
app/schemas/: __init__.py  auth.py  caja.py  common.py  comprobante.py  configuracion.py  pago.py  producto.py  turno.py  usuario.py  venta.py
app/services/: auth_service.py  caja_service.py  dian_service.py  impresion_service.py  notificacion_service.py  pago_service.py  turno_service.py  venta_service.py
app/tasks/: dian_tasks.py  print_tasks.py  report_tasks.py  shift_tasks.py
app/utils/: escpos_driver.py  qr_generator.py  xml_dian.py
pwa/: index.html  package-lock.json  package.json  vite.config.ts
pwa/src/: App.vue  router.ts  style.css
pwa/src/api/: client.ts
pwa/src/stores/: auth.ts  pos.ts
pwa/src/views/: AdminView.vue  App.vue  ConfiguracionView.vue  DashboardView.vue  LoginView.vue  POSView.vue  PagosView.vue  TurnosView.vue
scripts/: seed.py
tests/: conftest.py  test_api.py
