[project]
name = "pos-system"
version = "0.1.0"
description = "Multi-sucursal POS con Facturación Electrónica DIAN, Workforce Management y Liquidación de Sueldos"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.30.6",
    "sqlalchemy==2.0.35",
    "alembic==1.13.2",
    "asyncpg==0.29.0",
    "pydantic==2.9.2",
    "pydantic-settings==2.5.2",
    "python-jose[cryptography]==3.3.0",
    "passlib[bcrypt]==1.7.4",
    "python-multipart==0.0.9",
    "redis==5.0.8",
    "celery==5.4.0",
    "httpx==0.27.2",
    "lxml==5.2.2",
    "signxml==4.5.1",
    "python-escpos==3.1.0",
    "pywebpush==2.3.0",
    "cryptography==49.0.0",
    "pyotp==2.10.0",
    "qrcode[pil]==8.2",
    "pillow==10.4.0",
    "python-dotenv==1.0.1",
    "structlog==24.1.0",
    "tenacity==8.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.3",
    "pytest-asyncio==0.23.7",
    "pytest-cov==5.0.0",
    "httpx==0.27.2",
    "factory-boy==3.3.0",
    "faker==25.1.0",
    "ruff==0.6.5",
    "mypy==1.11.2",
    "pre-commit==3.8.0",
]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
target-version = "py311"
line-length = 100
select = ["E", "F", "I", "UP", "W", "C4", "C90", "B", "SIM", "T10", "T20", "ARG", "PTH", "ERA", "PD", "PL", "TRY", "NPY", "RSE", "RET", "FLY", "PIE"]
ignore = ["S101", "TRY003", "ARG001", "ARG002"]
per-file-ignores = {"tests/*": ["S101", "TRY003", "ARG001", "ARG002"]}

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
strict_optional = true
no_implicit_optional = true
check_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.alembic]
script_location = "alembic"
version_locations = "alembic/versions"